--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <title>Document</title>
 </head>
@@ -421,7 +422,7 @@
             <span class="section__subtitle">Que eu ofereço</span>
 
             <div class="services__container container grid">
-<!-- 1 -->
+                <!-- 1 -->
                 <div class="services__content">
                     <div>
                         <i class="uil uil-web-grid services__icon"></i>
@@ -459,7 +460,7 @@
                         </div>
                     </div>
                 </div>
-<!-- 2 -->
+                <!-- 2 -->
                 <div class="services__content">
                     <div>
                         <i class="uil uil-arrow services__icon"></i>
@@ -497,7 +498,7 @@
                         </div>
                     </div>
                 </div>
-<!-- 3 -->
+                <!-- 3 -->
                 <div class="services__content">
                     <div>
                         <i class="uil uil-pen services__icon"></i>
@@ -535,12 +536,67 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </section>
+<!-- 
+        <section class="portifolio section" id="portifolio">
+            <h2 class="section__title">Portifolio</h2>
+            <span class="section__subtitle">Trabalhos recentes</span>
 
+            <div class="portifolio__container container swiper-container">
+                <div class="swiper-wrapper">                    <div class="portifolio__content grid swiper-slide">
+                        <img src="./img/portfolio1.jpg" alt="portifolio 1" class="portifolio__img">
+                        <div class="portifolio__data">
+                            <h3 class="portifolio__title">WebSite Moderno</h3>
+                            <p class="portifolio__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Quia, asperiores! Quaerat?</p>
+                            <a href="#" class="button button--flex button--small portifolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>                    <div class="portifolio__content grid swiper-slide">
+                        <img src="./img/portfolio2.jpg" alt="portifolio 1" class="portifolio__img">
+
+                        <div class="portifolio__data">
+                            <h3 class="portifolio__title">Brand Design</h3>
+                            <p class="portifolio__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Quia, asperiores! Quaerat?</p>
+                            <a href="#" class="button button--flex button--small portifolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>                    <div class="portifolio__content grid swiper-slide">
+                        <img src="./img/portfolio3.jpg" alt="portifolio 1" class="portifolio__img">
+
+                        <div class="portifolio__data">
+                            <h3 class="portifolio__title">Loja online</h3>
+                            <p class="portifolio__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Quia, asperiores! Quaerat?</p>
+                            <a href="#" class="button button--flex button--small portifolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portifolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portifolio-icon"></i>
+                </div>
+
+                <div class="swiper-pagination"></div>
+            </div>
+        </section> -->
+
+        
     </main>
-
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
